@@ -15,8 +15,8 @@ ok( $font->get_name );
 
 ok( $weight = Gnome2::Print::Font->bold );
 
-use_ok('Gnome2::Print::Font');
-ok( $weight = Gnome2::Print::Font->GNOME_FONT_BOLD );
+use_ok('Gnome2::Print::Font::Constants');
+ok( $weight = Gnome2::Print::Font::Constants->GNOME_FONT_BOLD );
 
 ok( @font_list = Gnome2::Print::Font->list );
 ok( @family_list = Gnome2::Print::Font->family_list );
